Fix page content jumping caused by showing scrollbar

--- a/public/common.css
+++ b/public/common.css
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+	overflow-y: scroll;
 	padding-top: 20px;
 }
 
